tests/snapshots/tui_snapshots__commit_list_scrolled_to_bottom.snap
---
source: tests/tui_snapshots.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 8 },
    content: [
        " SHA        Title                                           ",
        "│00000000   Commit number 4                                 ",
        "│00000000   Commit number 5                                 ",
        "│00000000   Commit number 6                                 ",
        "█00000000   Commit number 7                                 ",
        "█00000000   Commit number 8                                 ",
        "█00000000   Commit number 9                                 ",
        " 000000000009 1/10                                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 9, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 27, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
