tests/snapshots/tui_snapshots__commit_list_scrolled_to_top.snap
---
source: tests/tui_snapshots.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 8 },
    content: [
        "┌Commits───────────────────────────────────────────────────┐",
        "│SHA        Title                                          │",
        "█00000000   Commit number 0                                │",
        "│00000000   Commit number 1                                │",
        "│00000000   Commit number 2                                │",
        "│00000000   Commit number 3                                │",
        "└──────────────────────────────────────────────────────────┘",
        " 000000000000 10/10                                         ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 59, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
