tests/snapshots/tui_snapshots__fragmap_horizontal_scroll.snap
---
source: tests/tui_snapshots.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 8 },
    content: [
        "SHA        Title               │ Hunk gr",
        "aaa1       Commit aaa1         │   █  █ ",
        "bbb2       Commit bbb2         │ █  █  █",
        "ccc3       Commit ccc3         │  █  █  ",
        "                               │        ",
        "                               │        ",
        "                               │ ───████",
        " aaa1 3/3                               ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 31, y: 0, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 22, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 1, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 35, y: 1, fg: White, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 36, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 38, y: 1, fg: White, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 2, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 4, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 5, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 6, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
